syntax = "proto3";

package io.afloatdb.raft.proto;

option java_multiple_files = true;

// Represents a Raft endpoint and is embedded into the other
// RaftMessage Protobufs.
// https://github.com/MicroRaft/MicroRaft/blob/master/microraft/src/main/java/io/microraft/RaftEndpoint.java
message RaftEndpointProto {
    // Unique id of a Raft endpoint
    string id = 1;
}
